--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ bio==0.3.0
 biopython==1.78
 bitarray==1.2.2
 blake2b-py==0.1.3
-Brlapi==0.6.6
 cached-property==1.5.2
 cachetools==4.2.1
 certifi==2020.12.5
@@ -135,7 +134,7 @@ rlp==2.0.1
 rsa==4.7.2
 scikit-image==0.13.1
 scikit-learn==0.24.1
-scipy==1.5.4
+scipy==1.5.4 ##########################################
 seaborn==0.11.1
 SecretStorage==2.3.1
 semantic-version==2.8.5
