--- a/requirements.txt
+++ b/requirements.txt
@@ -69,7 +69,6 @@ Keras-Preprocessing==1.1.2
 keyring==10.6.0
 keyrings.alt==3.0
 kiwisolver==1.3.1
-language-selector==0.1
 leveldb==0.1
 louis==3.5.0
 lru-dict==1.1.7
@@ -132,7 +131,7 @@ rlp==2.0.1
 rsa==4.7.2
 scikit-image==0.13.1
 scikit-learn==0.24.1
-scipy==1.5.4 ##########################################
+scipy==1.5.4
 seaborn==0.11.1
 SecretStorage==2.3.1
 semantic-version==2.8.5
